# llmlingua_langserve

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: server.py
llmlingua_langserve/: langserver.py
