[tool.poetry]
name = "llmlingua_langserve"
version = "0.1.0"
description = "Langserve for LLMLingua"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ccurme/llmlingua_langserve"

[tool.poetry.dependencies]
python = ">= 3.10, < 4.0"
langserve = {version = ">= 0.0.41 < 1.0", extras = ["all"]}
fastapi = ">= 0.108.0, < 1.0"
sse_starlette = ">= 1.8.2, < 2.0"
llmlingua = "^0.1.5"
accelerate = "^0.26.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["tests"]
